--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -5,4 +5,54 @@
   display: inline-block;
   position: relative;
   cursor: pointer;
+  margin-bottom: -4px;
+}
+
+.copy-button {
+  width: 100px;
+  height: 30px;
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+  left: 50%;
+  margin-left: -50px;
+  margin-top: -15px;
+  text-align: center;
+  outline: none;
+  background: #66646427;
+  font-size: 1rem;
+  border: none;
+  line-height: 30px;
+  color: white;
+  text-transform: uppercase;
+  opacity: 0;
+}
+
+.ColorBox:hover .copy-button {
+  opacity: 1;
+  transition: 0.5s;
+}
+
+.box-content {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 0px;
+  padding: 10px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+
+.see-more {
+  position: absolute;
+  width: 60px;
+  right: 0px;
+  bottom: 0px;
+  background: #9b999927;
+  color: white;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  text-transform: uppercase;
 }
