--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -56,3 +56,65 @@
   line-height: 30px;
   text-transform: uppercase;
 }
+
+.copy-overlay {
+  opacity: 0;
+  z-index: 0;
+  height: 100%;
+  width: 100%;
+  transition: transform 0.5s ease-in-out;
+  scale: (0.1);
+}
+
+.copy-overlay.show {
+  opacity: 1;
+  transform: scale(50);
+  z-index: 10;
+  position: absolute;
+}
+
+.copy-msg {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: content;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 4rem;
+  transform: scale(0.1);
+  opacity: 0;
+  color: white;
+}
+
+.copy-overlay.show {
+  opacity: 1;
+  transform: scale(50);
+  z-index: 10;
+  position: absolute;
+}
+
+.copy-msg.show {
+  align-items: center;
+  opacity: 1;
+  transform: scale(1);
+  z-index: 15;
+  transition: all 0.5s ease-in-out;
+  transition-delay: 0.5s;
+}
+
+.copy-msg h1 {
+  font-weight: 400;
+  text-align: center;
+  width: 100%;
+  background: #a4f4ff62;
+  padding: 1rem;
+  margin-bottom: 0;
+}
+
+.copy-msg p {
+  font-size: 2rem;
+  font-weight: 100;
+}
