--- a/src/Palette.css
+++ b/src/Palette.css
@@ -5,3 +5,30 @@
 .Palette-colors {
   height: 90%;
 }
+
+.slider {
+  width: 340px;
+  margin: 0 10px;
+  display: inline-block;
+}
+
+.rc-slider-track {
+  background-color: transparent;
+}
+
+.rc-slider-rail {
+  height: 8px;
+}
+
+.rc-slider-handle,
+.rc-slider-handle:focus,
+.rc-slider-handle:hover,
+.rc-slider-handle:active {
+  background-color: green;
+  border: 2px solid green;
+  outline: none;
+  width: 13px;
+  box-shadow: none;
+  margin-left: -7px;
+  margin-top: -3px;
+}
