--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -4,6 +4,7 @@
   align-items: center;
   /* justify-content: flex-start; */
   height: 6vh;
+  background-image: linear-gradient(-20deg, #e9defa 0%, #fbfcdb 100%);
 }
 
 .logo {
@@ -14,17 +15,11 @@
   font-size: 22px;
   height: 100%;
   font-family: Roboto;
-
-  background: linear-gradient(
-    to right,
-    #85d8ce,
-    #085078
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .logo a {
   text-decoration: none;
-  color: white;
+  color: #8d897dbe;
   font-family: "Poppins", sans-serif;
 }
 
