--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -6,7 +6,6 @@
   position: relative;
   cursor: pointer;
   margin-bottom: -4px;
-  overflow: hidden;
 }
 
 .copy-button {
@@ -57,16 +56,14 @@
   line-height: 30px;
   text-transform: uppercase;
 }
-
 .copy-overlay {
   opacity: 0;
   z-index: 0;
-  height: 100%;
   width: 100%;
-  transition: transform 0.5s ease-in-out;
-  scale: (0.1);
+  height: 100%;
+  transition: transform 0.6s ease-in-out;
+  transform: scale(0.1);
 }
-
 .copy-overlay.show {
   opacity: 1;
   transform: scale(50);
@@ -76,25 +73,18 @@
 
 .copy-msg {
   position: fixed;
-  top: 0;
-  bottom: 0;
   left: 0;
   right: 0;
+  top: 0;
+  bottom: 0;
   display: flex;
-  align-items: content;
-  flex-direction: column;
+  align-items: center;
   justify-content: center;
+  flex-direction: column;
   font-size: 4rem;
   transform: scale(0.1);
   opacity: 0;
   color: white;
-}
-
-.copy-overlay.show {
-  opacity: 1;
-  transform: scale(50);
-  z-index: 10;
-  position: absolute;
 }
 
 .copy-msg.show {
